--- a/showall.html
+++ b/showall.html
@@ -314,6 +314,38 @@
   }
 }
 
+
+.cart-icon {
+  position: relative;
+  margin-left: 15px;
+  margin-right: 10px;
+  font-size: 1.6rem;
+  color: white;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.navbar .cart-icon {
+  order: 3;
+}
+
+.cart-count {
+  position: absolute;
+  top: -8px;
+  right: -10px;
+  background-color: #ffc107;
+  color: black;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.75rem;
+  font-weight: bold;
+}
+
 </style>
 </head>
 <body>
