--- a/INDEX.html
+++ b/INDEX.html
@@ -35,7 +35,7 @@ body {
   min-height: 100vh;
 }
 
-/* === NAVBAR === */
+/* === NAVBAR START === */
 .a a:hover {
   text-transform: uppercase;
 }
@@ -47,6 +47,8 @@ body {
   color: #ffc107 !important;
   text-transform: uppercase;
 }
+/* NAVBAR END */
+
 
 /* === CARDS === */
 .card {
@@ -328,14 +330,30 @@ body {
   background-color: black;
   color: white;
   border: 1px solid white;
-  border-radius: 10px;
+  border-radius: 5px;
   margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 1rem;
+  min-width: 100px;
 }
+
+/* Hover state */
 .glassBox__button:hover {
   background-color: yellow;
   color: black;
   border: 1px solid black;
 }
+
+/* Adjust for small screens */
+@media (max-width: 576px) {
+  .glassBox__button {
+    font-size: 0.9rem;
+    padding: 6px 12px;
+    min-width: unset;
+  }
+}
+
+
 @media (min-width: 1024px) {
   .glassBox {
     height: 320px;
@@ -558,6 +576,13 @@ body {
     display: none;
   }
 }
+@media (max-width: 767px) {
+  .hide-laptop-banner {
+    display: none !important;
+  }
+}
+
+
 
 </style>
 <body style="background-color: black;">
@@ -585,6 +610,8 @@ body {
 <a class="nav-link" href="showall.html">Show All</a>
 </li>
 </ul>
+<!-- navbar end -->
+
 <!-- Cart Icon -->
 <div class="cart-icon" id="cartIcon">
 <i class="fas fa-shopping-cart"></i>
@@ -612,41 +639,19 @@ body {
 </div>
 </nav>
 <!-- nav end -->
-<!-- slider start -->
-<div class="carousel slide d-none d-md-block" content="fast food delivery" data-bs-ride="carousel" id="carouselExampleIndicators">
-<!-- Keywords for slider: best fast food, delivery banners -->
-<div class="carousel-indicators">
-<button aria-current="true" aria-label="Slide 1" class="active" data-bs-slide-to="0" data-bs-target="#carouselExampleIndicators" type="button"></button>
-<button aria-label="Slide 2" data-bs-slide-to="1" data-bs-target="#carouselExampleIndicators" type="button"></button>
-<button aria-label="Slide 3" data-bs-slide-to="2" data-bs-target="#carouselExampleIndicators" type="button"></button>
-</div>
-<div class="carousel-inner">
-<div class="carousel-item active">
-<img alt="..." class="d-block w-100 img-fluid" src="IMAGES/banner 01.jpg"/>
-</div>
-<div class="carousel-item">
-<img alt="..." class="d-block w-100 img-fluid" src="IMAGES/banner 02.png"/>
-</div>
-<div class="carousel-item">
-<img alt="..." class="d-block w-100 img-fluid" src="IMAGES/banner 03.png"/>
-</div>
-</div>
-<button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carouselExampleIndicators" type="button">
-<span aria-hidden="true" class="carousel-control-prev-icon"></span>
-<span class="visually-hidden">Previous</span>
-</button>
-<button class="carousel-control-next" data-bs-slide="next" data-bs-target="#carouselExampleIndicators" type="button">
-<span aria-hidden="true" class="carousel-control-next-icon"></span>
-<span class="visually-hidden">Next</span>
-</button>
-</div><div class="d-block d-md-none"><img alt="Mobile Banner" class="img-fluid w-100" src="IMAGES/Mobile Banner.png"/></div>
+ <!-- Single banner replacing slider -->
+<img src="IMAGES/laptop banner.png" alt="Fast Food Delivery Banner" class="d-block w-100 img-fluid hide-laptop-banner" />
+
+
+<div class="d-block d-md-none"><img alt="Mobile Banner" class="img-fluid w-100" src="IMAGES/Mobile Banner.png"/></div>
 <!-- slider end -->
-<hr style="color: gold;"/>
+
+<br><br>
 <!-- cards data start -->
 <div class="container" content="order fasst food">
 <div class="row m-2">
 <div class="col">
-<h1 class="text-center" style="color: #ffc107;">Our Products</h1>
+<h1 style="color: white; font-weight: bold; text-transform: uppercase; position: relative; display: inline-block; font-size: 1.70rem; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Explore Menu<span style="content:''; display: block; width: 30%; height: 3px; background-color: #d0021b; margin-top: 5px;"></span></h1>
 </div>
 </div>
 <div class="row" id="dataa">
@@ -655,7 +660,14 @@ body {
 </div>
 <!-- cards data end -->
 <!-- category section start -->
-<h1 style="color: #ffc107;" class="category-title">Our Categories</h1>
+<h1 style="color: white; padding: 40px 20px 40px calc(8vw + 10px); font-weight: bold; text-transform: uppercase; position: relative; display: inline-block; font-size: 1.70rem; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+  Categories
+  <span style="display: block; width: 30%; height: 3px; background-color: #d0021b; margin-top: 5px;"></span>
+</h1>
+
+
+
+
 <div class="cards-container">
 <div class="glassBox">
 <div class="glassBox__imgBox">
@@ -690,7 +702,7 @@ body {
 
 <!-- hot product start -->
  <div class="section">
-    <h2 class="section-title">🔥 Our Hot Sellers</h2>
+    <h1 style="color: white; font-weight: bold; text-transform: uppercase; position: relative; display: inline-block; font-size: 1.70rem; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">best sellers<span style="content:''; display: block; width: 40%; height: 3px; background-color: #d0021b; margin-top: 5px;"></span></h1>
     <div class="items-container">
       <div class="food-card">
         <img src="IMAGES/7.png" alt="BLACK HAMBURGER" class="food-img" />
@@ -762,9 +774,6 @@ const data = [
   { img: "IMAGES/4.png", title: "HAMBURGER", des: "PRICE $25" },
   { img: "IMAGES/5.png", title: "MARGHERITA PIZZA", des: "PRICE $19" },
   { img: "IMAGES/6.png", title: "MILANESE PIZZA", des: "PRICE $25" },
-  { img: "IMAGES/7.png", title: "BLACK HAMBURGER", des: "PRICE $25" },
-  { img: "IMAGES/8.png", title: "MUSH BURGER", des: "PRICE $16" },
-  { img: "IMAGES/9.png", title: "PEPPERONI PIZZA", des: "PRICE $20" }
 ];
 
 // DOM Elements
