--- a/showall.html
+++ b/showall.html
@@ -390,7 +390,7 @@
     <div class="container">
         <div class="row m-2">
             <div class="col">
-                <h1 style="color: gold;" class="text-center">ALL PRODUCTS</h1>
+                <h1 style="color: white; font-weight: bold; text-transform: uppercase; position: relative; display: inline-block; font-size: 1.70rem; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Pizza<span style="content:''; display: block; width: 30%; height: 3px; background-color: #d0021b; margin-top: 5px;"></span></h1>
             </div>
         </div>
         <div class="row" id="card">
