--- a/INDEX.html
+++ b/INDEX.html
@@ -669,36 +669,37 @@ body {
 
 
 <div class="cards-container">
-<div class="glassBox">
+<div class="glassBox" data-aos="zoom-in-up">
 <div class="glassBox__imgBox">
 <img alt="Golden Shoe" src="IMAGES/CATEGORY 01.png">
 <h3 class="glassBox__title">PIZZA</h3>
 </img></div>
-<button class="glassBox__button">View All</button>
+<button class="glassBox__button" onclick="location.href='showall.html#pizzaHeading'">View All</button>
 </div>
-<div class="glassBox">
+<div class="glassBox" data-aos="zoom-in-up">
 <div class="glassBox__imgBox">
 <img alt="Golden Shoe" src="IMAGES/CAEGORY 2.webp">
 <h3 class="glassBox__title">BURGER</h3>
 </img></div>
-<button class="glassBox__button">View All</button>
+<button class="glassBox__button" onclick="location.href='showall.html#burgerHeading'">View All</button>
 </div>
-<div class="glassBox">
+<div class="glassBox" data-aos="zoom-in-up">
 <div class="glassBox__imgBox">
 <img alt="Golden Shoe" src="IMAGES/category 3.png">
 <h3 class="glassBox__title">FISH &amp; SALAD</h3>
 </img></div>
-<button class="glassBox__button">View All</button>
+<button class="glassBox__button" onclick="location.href='showall.html#fish&saladHeading'">View All</button>
 </div>
-<div class="glassBox">
+<div class="glassBox" data-aos="zoom-in-up">
 <div class="glassBox__imgBox">
 <img alt="Golden Shoe" src="IMAGES/category 4.png">
 <h3 class="glassBox__title">DESSERT</h3>
 </img></div>
-<button class="glassBox__button">View All</button>
+<button class="glassBox__button" onclick="location.href='showall.html#dessertHeading'">View All</button>
 </div>
 </div>
 <!-- category section end -->
+
 
 <!-- hot product start -->
  <div class="section">
