--- a/gallery.html
+++ b/gallery.html
@@ -14,6 +14,20 @@
     referrerpolicy="no-referrer"
   />
   <style>
+     /* Custom scrollbar styles */
+        ::-webkit-scrollbar {
+            width: 5px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #000;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #ffc107;
+            border-radius: 5px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #ffd700;
+        }
     /* NAVBAR START */
     .a a:hover {
       text-transform: uppercase;
