--- a/login.html
+++ b/login.html
@@ -9,6 +9,20 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="shortcut icon" href="IMAGES/LOGO.png" type="image/x-icon">
     <style>
+         /* Custom scrollbar styles */
+        ::-webkit-scrollbar {
+            width: 5px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #000;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #ffc107;
+            border-radius: 5px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #ffd700;
+        }
         /* Modern Style Update */
         * {
             margin: 0;
