--- a/singup.html
+++ b/singup.html
@@ -10,6 +10,20 @@
     <link rel="shortcut icon" href="IMAGES/LOGO.png" type="image/x-icon">
     <style>
         /* Modern Style Update */
+         /* Custom scrollbar styles */
+        ::-webkit-scrollbar {
+            width: 5px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #000;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #ffc107;
+            border-radius: 5px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #ffd700;
+        }
         * {
             margin: 0;
             padding: 0;
