--- a/showall.html
+++ b/showall.html
@@ -113,7 +113,7 @@
             }
         }
         
-        /* NAVBAR END */
+        /* NAVBAR ENDS */
         
         /* CARD STYLING */
         .card {
