--- a/showall.html
+++ b/showall.html
@@ -434,7 +434,14 @@
                 }
             }
         }
-    </style>
+    
+#cartItems {
+    max-height: 400px;
+    overflow-y: auto;
+    margin-bottom: 15px;
+}
+
+</style>
 </head>
 <body>
     <!-- Navbar Start -->
@@ -647,7 +654,7 @@
             { img: "IMAGES/PRO 12 GREEN CURRY.png", title: "GREEN CURRY", price: 40 },
             { img: "IMAGES/fish 7.png", title: "SALMON WITH SALAD", price: 20 },
             { img: "IMAGES/fish 8.png", title: "FISH PLATE", price: 15 },
-            { img: "IMAGES/FISH 9.png", title: "FISH PASTA SALAD", price: 15 },
+            { img: "IMAGES/fish 9.png", title: "FISH PASTA SALAD", price: 15 },
             { img: "IMAGES/dessert 1.png", title: "CREAM CUPCAKE ", price: 5 },
             { img: "IMAGES/dessert 2.png", title: "BROWNE SLICE", price: 5 },
             { img: "IMAGES/dessert 3.png", title: "CHOCOLATE MOUSSE", price: 10 },
