--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <style>
      /* Custom scrollbar styles */
         ::-webkit-scrollbar {
-            width: 5px;
+            width: 3px;
         }
         ::-webkit-scrollbar-track {
             background: #000;
@@ -128,7 +128,7 @@
             <input type="checkbox" class="form-check-input" required>
             <label class="form-check-label">Agree to terms and conditions</label>
           </div>
-          <button class="btn btn-dark w-100" type="submit">Submit</button>
+          <button style="background-color: gold;color: black;" class="btn btn-dark w-100" type="submit">Submit</button>
         </form>
       </div>
     </div>
