--- a/contact.html
+++ b/contact.html
@@ -24,17 +24,75 @@
             background: #ffd700;
         }
     body { background-color: black; color: white; }
-    .nav-link { color: white !important; transition: 0.3s ease; }
-    .nav-link:hover { color: #ffc107 !important; text-transform: uppercase; }
-    .navbar { background-color: red; }
-    .navbar-toggler { border: none; }
-    .offcanvas { background-color: black; width: 250px !important; color: white; }
-    .offcanvas-body .nav-link { padding: 0.5rem 0; border-bottom: 1px solid rgba(255,255,255,0.1); }
-    .desktop-menu { display: none; }
-    @media (min-width: 992px) {
-      .offcanvas, .navbar-toggler { display: none !important; }
-      .desktop-menu { display: flex !important; }
-    }
+      /* === NAVBAR START === */
+        .a a:hover {
+            text-transform: uppercase;
+        }
+        .nav-link {
+            color: white !important;
+            transition: all 0.3s ease;
+        }
+        .nav-link:hover {
+            color: #ffc107 !important;
+            text-transform: uppercase;
+        }
+
+        /* Custom navbar toggler styles */
+        .navbar-toggler {
+            border: none;
+            padding: 0.5rem;
+            transition: all 0.3s ease;
+        }
+
+        .navbar-toggler:focus {
+            box-shadow: none;
+        }
+
+        .navbar-toggler.collapsed {
+            background-color: transparent;
+        }
+
+        .navbar-toggler:not(.collapsed) {
+            background-color: red !important;
+        }
+
+        /* Offcanvas menu styles */
+        .offcanvas {
+            background-color: black;
+            color: white;
+        }
+
+        .offcanvas-header {
+            border-bottom: 1px solid rgba(255,255,255,0.1);
+        }
+
+        .offcanvas-body .nav-link {
+            padding: 0.5rem 0;
+            border-bottom: 1px solid rgba(255,255,255,0.1);
+        }
+
+        /* Mobile menu buttons */
+        .mobile-menu-buttons {
+            display: none;
+            padding: 1rem;
+            border-top: 1px solid rgba(255,255,255,0.1);
+            margin-top: 1rem;
+        }
+
+        .mobile-menu-buttons .btn {
+            width: 100%;
+            margin-bottom: 0.5rem;
+        }
+
+        @media (max-width: 991.98px) {
+            .desktop-buttons {
+                display: none !important;
+            }
+            .mobile-menu-buttons {
+                display: block;
+            }
+        }
+        /* NAVBAR END */
 
     .contact-form {
       background: linear-gradient(150deg, orange 50%, black 50%);
@@ -62,43 +120,52 @@
 </head>
 <body>
 
-<!-- Navbar Start -->
-<nav class="navbar navbar-dark sticky-top">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="IMAGES/LOGO.png" height="60" alt="Logo" /></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title">Menu</h5>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
-          <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-          <li class="nav-item"><a class="nav-link" href="showall.html">Show All</a></li>
-        </ul>
-      </div>
+   <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg navbar-dark position-sticky top-0" style="z-index: 2; background-color: red;">
+        <div class="container-fluid">
+            <div style="padding-right: 50px;" class="img">
+                <img src="IMAGES/LOGO.png" alt="Logo" height="60px">
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="a" class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                    <li class="a" class="nav-item"><a class="nav-link text-white" href="about.html">About Us</a></li>
+                    <li class="a" class="nav-item"><a class="nav-link text-white" href="contact.html">Contact Us</a></li>
+                    <li class="a" class="nav-item"><a class="nav-link text-white" href="feedback.html">Feedback</a></li>
+                    <li class="a" class="nav-item"><a class="nav-link text-white" href="gallery.html">Gallery</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="showall.html">Show All</a>
+                    </li>
+                </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+    
+    <!-- Offcanvas Sidebar Menu -->
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+                <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                <li class="nav-item"><a class="nav-link" href="showall.html">Show All</a></li>
+            </ul>
+            
+            <!-- Mobile Menu Buttons -->
+        </div>
     </div>
-
-    <!-- Desktop Menu -->
-    <ul class="navbar-nav flex-row gap-3 ms-auto me-3 desktop-menu">
-      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-      <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-      <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
-      <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-      <li class="nav-item"><a class="nav-link" href="showall.html">Show All</a></li>
-    </ul>
-  </div>
-</nav>
-<!-- Navbar End -->
+    <!-- Navbar End -->
 
 <!-- Main Content -->
 <div class="container my-5">
